--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .fill {
-    background-image: url('http://source.unsplash.com/random/150*150');
+    background-image: url('https://source.unsplash.com/random/150*150');
     background-size: cover;
     background-position: center;
     position: relative;
